--- a/OurAlarm/app/src/main/res/layout/fragment_alarm_view.xml
+++ b/OurAlarm/app/src/main/res/layout/fragment_alarm_view.xml
@@ -21,20 +21,24 @@
             android:gravity="center_vertical"
             android:padding="@dimen/abc_action_bar_default_padding_material"
             android:background="@color/background_bottom_bar_material">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_action_add_alarm"/>
+            <ImageButton
+                android:layout_width="@dimen/abc_action_button_min_height_material"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_action_add_alarm"
+                android:background="@color/background_bottom_bar_material"
+                android:id="@+id/add_alarm"/>
             <View
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
 
             </View>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@android:drawable/ic_menu_delete"/>
+            <ImageButton
+                android:layout_width="@dimen/abc_action_button_min_height_material"
+                android:layout_height="match_parent"
+                android:src="@android:drawable/ic_menu_delete"
+                android:background="@color/background_bottom_bar_material"
+                android:id="@+id/remove_alarm"/>
         </LinearLayout>
         <ListView
             android:layout_width="match_parent"
