--- a/OurAlarm/app/src/main/res/layout/fragment_main.xml
+++ b/OurAlarm/app/src/main/res/layout/fragment_main.xml
@@ -11,8 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/top"
-        android:onClick="OnClick">
+        android:id="@+id/top">
 
         <TextView
             android:text="17:30"
@@ -20,7 +19,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="50dp"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+
+            android:onClick="OnClick"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
