--- a/OurAlarm/app/src/main/res/layout/fragment_alarm_view.xml
+++ b/OurAlarm/app/src/main/res/layout/fragment_alarm_view.xml
@@ -44,7 +44,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/alarm_top"
-            android:id="@+id/alarm_list">
+            android:layout_above="@+id/bottom_menu_top"
+            android:id="@+id/alarm_list"
+            android:dividerHeight="1dip">
         </ListView>
 
     </RelativeLayout>
