--- a/OurAlarm/app/src/main/res/layout/fragment_alarm_edit.xml
+++ b/OurAlarm/app/src/main/res/layout/fragment_alarm_edit.xml
@@ -13,14 +13,17 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/alarm_item_height"
             android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
             <TextView
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:text="@string/time"
-                android:textSize="@dimen/setting_font_size"
+                android:textSize="@dimen/abc_text_size_headline_material"
                 android:textStyle="bold"
-                android:layout_weight="0.4" />
+                android:layout_weight="0.4"
+                android:layout_marginLeft="0dp" />
             <EditText
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
@@ -29,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=" : "
-                android:textSize="@dimen/setting_font_size"
+                android:textSize="@dimen/abc_text_size_headline_material"
                 android:textStyle="bold"/>
             <EditText
                 android:layout_width="80dp"
@@ -44,18 +47,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/alarm_item_height"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingLeft="20dp"
+            android:gravity="center_vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/setting_font_size"
+                android:textSize="@dimen/abc_text_size_headline_material"
                 android:textStyle="bold"
                 android:text="@string/repeat"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="All Day"
-                android:textSize="9pt"/>
+                android:text="@string/repeat_all"
+                android:textSize="@dimen/abc_text_size_medium_material"/>
             </LinearLayout>
 
         <View
@@ -65,11 +70,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:gravity="center_vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/setting_font_size"
+                android:textSize="@dimen/abc_text_size_headline_material"
                 android:textStyle="bold"
                 android:text="@string/message_title_text"/>
             <EditText
