--- a/OurAlarm/app/src/main/res/layout/fragment_alarm_edit.xml
+++ b/OurAlarm/app/src/main/res/layout/fragment_alarm_edit.xml
@@ -15,7 +15,8 @@
             android:orientation="horizontal"
             android:gravity="center_vertical"
             android:paddingLeft="20dp"
-            android:paddingRight="20dp">
+            android:paddingRight="20dp"
+            android:id="@+id/set_date_time">
             <TextView
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
